# GK-HI

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
GK_HI/: README.md  pyproject.toml
GK_HI/src/gk_hi/: __init__.py  main.py
src/gk_hi/: questions.py
