[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gkhindi"
version = "1.0.0"
authors = [
  { name="qwerty20082009", email="your@email.com" },
]
description = "A collection of 200+ General Knowledge questions in Hindi"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["GK_HI/src"]
