[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GK-HI"
version = "1.0.0"
authors = [
  { name="Lakshy Chaurasia", email="lpg.m190120089@gmail.com" },
]
description = "A collection of 200+ General Knowledge questions in Hindi for educational apps."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LakshyChaurasia/GK-HIhttps://github.com/qwerty20082009/GK-HI"